--- a/themes/light/cdm.less
+++ b/themes/light/cdm.less
@@ -323,7 +323,7 @@ div.cdm.expandable:not(.active) {
 div.cdm {
 	&.expandable.active,
 	&.expanded {
-		.header[stuck] {
+		.header[data-is-stuck] {
 			box-shadow : 0 1px 1px -1px rgba(0,0,0,0.1);
 			border: 0 solid @border-default;
 			border-bottom-width: 1px;
